--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Selamat Datang</h1>
     <p>Ini adalah halaman index sederhana yang berfungsi sebagai contoh dasar.</p>
     <p>contoh.</p>
+    <p>contoh.</p>
+    <p>contoh.</p>
 </body>
 
 </html>
